fixed spacing for children/sibings

--- a/styles.css
+++ b/styles.css
@@ -295,6 +295,7 @@ If your plugin does not need CSS, delete this file.
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   outline: none;
 }
 
